--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 body {
-  font-family: "Open Sans, sans-serif";
+  font-family: "Open Sans", sans-serif;
 }
 
 .card-title {
-  font: 500 1.25rem "Lobster, cursive";
+  font: 500 1.25rem "Lobster", cursive;
 }
 
 .card-img-overlay .card-title{
